--- a/index.html
+++ b/index.html
@@ -120,8 +120,13 @@
   <section id="interests">
     <h2>Research Interests</h2>
     <ul>
-        
-      </li>
+      <li>Atomistic materials modeling & crystal structure prediction</li>
+      <li>AI generative models for materials (diffusion, LLMs, VAE with symmetry-aware representations)</li>
+      <li>Energy, molecular and battery materials</li>
+    </ul>
+  </section>
+
+  <!-- NEWS -->
   <section id="news">
     <h2>News</h2>
     <div class="news-grid">
