--- a/index.html
+++ b/index.html
@@ -289,17 +289,17 @@
         </div>
       </li>
       <li>
-        <b>Unveiling X‑ray Absorption Signatures of Boron Nitride via First‑Principles Simulation and Machine Learning</b> — 2025.
-        W‑Y Sun, O. G. Ridwan, S. O. Kucheyev, Q. Zhu, L‑W Wan. Accepted for publication in <i>Next Materials</i>.
+        <b>Crystal Generation using the Fully Differentiable Pipeline and Latent Space Optimization</b> — 2026.
+        O. G. Ridwan, G. Frapper, H‑F. Xue, Q. Zhu.
+        <a href="https://arxiv.org/abs/2601" target="_blank">arXiv</a>
         <div class="badges">
           <span class="badge">preprint</span>
           <a class="badge" href="#" target="_blank" rel="noopener">BibTeX</a>
         </div>
       </li>
       <li>
-        <b>Crystal Generation using the Fully Differentiable Pipeline and Latent Space Optimization</b> — 2026.
-        O. G. Ridwan, H‑F. Xue, Q. Zhu.
-        <a href="https://arxiv.org/abs/2601" target="_blank">arXiv</a>
+        <b>Unveiling X‑ray Absorption Signatures of Boron Nitride via First‑Principles Simulation and Machine Learning</b> — 2025.
+        W‑Y Sun, O. G. Ridwan, S. O. Kucheyev, Q. Zhu, L‑W Wan. Accepted for publication in <i>Next Materials</i>.
         <div class="badges">
           <span class="badge">preprint</span>
           <a class="badge" href="#" target="_blank" rel="noopener">BibTeX</a>
@@ -316,13 +316,6 @@
       </li>
       <li>
         <b>Crystal Representation in the Reciprocal Space</b> — 2025. (to submit)
-        <div class="badges">
-          <span class="badge">preprint</span>
-          <a class="badge" href="#" target="_blank" rel="noopener">BibTeX</a>
-        </div>
-      </li>
-      <li>
-        <b>Enhancing Crystal Optimization at the Latent Space</b> — 2025. (in preparation)
         <div class="badges">
           <span class="badge">preprint</span>
           <a class="badge" href="#" target="_blank" rel="noopener">BibTeX</a>
