--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
           <li>Expanded from 25 known low-energy sp²-carbon allotropes to over 1,700 new candidate structures within 0.5 eV/atom of graphite.</li>
           <li>Enabled targeted generation toward local chemical environments using geometry-aware latent representations.</li>
         </ul>
-        <p class="project-links"><a href="https://github.com/MaterSim/LEGO-xtal" target="_blank">Code</a> | <a href="https://arxiv.org/abs/2506.08224" target="_blank">arXiv</a></p>
+        <p class="project-links"><a href="https://github.com/MaterSim/LEGO-xtal" target="_blank">Code</a> | <a href="https://arxiv.org/abs/2506.08224" target="_blank">paper</a></p>
       </div>
 
       <div class="project">
@@ -237,6 +237,7 @@
           <li>Built a fully differentiable pipeline that backpropagates through representation-space objectives and couples them with latent-space refinement.</li>
           <li>Achieved ~5× speedup via batching and GPU acceleration, with improved success in meeting target local-environment constraints.</li>
         </ul>
+        <p class="project-links"><a href="https://github.com/MaterSim/LEGO-Xtal-GPU" target="_blank">Code</a> | <a href="https://arxiv.org/abs/2601.04606" target="_blank">arXiv</a></p>
       </div>
 
       <div class="project">
@@ -255,6 +256,7 @@
         <ul>
           <li>Conducted DFT simulations and collaborated with LLNL on ML-assisted X-ray absorption spectroscopy and optical modeling of boron nitride.</li>
         </ul>
+        <p class="project-links"> <a href="https://www.sciencedirect.com/science/article/pii/S2949822825007890" target="_blank">paper</a></p>
       </div>
 
       <div class="project">
@@ -300,6 +302,7 @@
       <li>
         <b>Unveiling X‑ray Absorption Signatures of Boron Nitride via First‑Principles Simulation and Machine Learning</b> — 2025.
         W‑Y Sun, O. G. Ridwan, S. O. Kucheyev, Q. Zhu, L‑W Wan. Accepted for publication in <i>Next Materials</i>.
+        <a href="https://doi.org/10.1016/j.nxmate.2025.101271" target="_blank">Journal</a>       
         <div class="badges">
           <span class="badge">preprint</span>
           <a class="badge" href="#" target="_blank" rel="noopener">BibTeX</a>
