--- a/index.html
+++ b/index.html
@@ -3,32 +3,44 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Osman Goni Ridwan — AI + Materials Discovery</title>
-  <meta name="description" content="AI-assisted crystal structure generation (LEGO-xtal), symmetry-aware generative models, HPC workflows for functional materials.">
+  <title>Osman Goni Ridwan (OG Ridwan) — AI + Materials Discovery | Osman Ridwan</title>
+  <meta name="description" content="Osman Goni Ridwan (OG Ridwan, Osman Ridwan) - AI-assisted crystal structure generation (LEGO-xtal), symmetry-aware generative models, HPC workflows for functional materials. PhD candidate at UNC Charlotte.">
+  <meta name="keywords" content="Osman Goni Ridwan, OG Ridwan, Osman Ridwan, LEGO-xtal, crystal structure prediction, materials discovery, AI materials science, generative models, UNC Charlotte, computational materials">
+  <meta name="author" content="Osman Goni Ridwan">
   <link rel="icon" href="assets/favicon.ico">
   <link rel="canonical" href="https://oridwan.github.io/">
-  <meta property="og:title" content="Osman Goni Ridwan — AI + Materials Discovery">
-  <meta property="og:description" content="Generative AI for crystal structure prediction; symmetry-aware models; HPC workflows.">
-  <meta property="og:type" content="website">
+  <meta property="og:title" content="Osman Goni Ridwan (OG Ridwan) — AI + Materials Discovery">
+  <meta property="og:description" content="Osman Goni Ridwan (OG Ridwan, Osman Ridwan) - Generative AI for crystal structure prediction; symmetry-aware models; HPC workflows.">
+  <meta property="og:type" content="profile">
   <meta property="og:url" content="https://oridwan.github.io/">
-  <meta property="og:site_name" content="Osman Goni Ridwan">
+  <meta property="og:site_name" content="Osman Goni Ridwan | OG Ridwan">
+  <meta property="profile:first_name" content="Osman">
+  <meta property="profile:last_name" content="Ridwan">
+  <meta property="profile:username" content="ogridwan">
   <meta property="og:image" content="https://oridwan.github.io/assets/image_OGR.jpg">
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Osman Goni Ridwan — AI + Materials Discovery">
-  <meta name="twitter:description" content="Generative AI for crystal structure prediction; symmetry-aware models; HPC workflows.">
+  <meta name="twitter:title" content="Osman Goni Ridwan (OG Ridwan) — AI + Materials Discovery">
+  <meta name="twitter:description" content="Osman Goni Ridwan - Generative AI for crystal structure prediction; symmetry-aware models; Atomistic Modelling.">
+  <meta name="twitter:creator" content="@ogridwan">
   <meta name="twitter:image" content="https://oridwan.github.io/assets/image_OGR.jpg">
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
     "@type": "Person",
     "name": "Osman Goni Ridwan",
+    "alternateName": ["OG Ridwan", "Osman Ridwan", "O. G. Ridwan", "Ridwan, Osman Goni"],
+    "givenName": "Osman Goni",
+    "familyName": "Ridwan",
     "affiliation": {"@type":"CollegeOrUniversity","name":"University of North Carolina at Charlotte"},
     "jobTitle": "PhD Candidate",
     "email": "mailto:oridwan@charlotte.edu",
     "url": "https://oridwan.github.io/",
+    "description": "PhD candidate in Mechanical Engineering specializing in AI-assisted materials discovery, crystal structure prediction, and symmetry-aware generative models.",
+    "knowsAbout": ["Artificial Intelligence", "Materials Science", "Crystal Structure Prediction", "Generative Models", "Computational Materials Science", "Machine Learning"],
     "sameAs": [
-      "https://scholar.google.com/",
+      "https://scholar.google.com/citations?user=-NaiqfUAAAAJ&hl=en",
       "https://linkedin.com/in/ogridwan",
+      "https://github.com/oridwan",
       "https://github.com/MaterSim/LEGO-xtal"
     ]
   }
@@ -79,7 +91,7 @@
 <a class="skip-link" href="#about">Skip to content</a>
 <header class="top">
   <nav aria-label="Primary">
-    <a class="brand" href="#">Ridwan</a>
+    <a class="brand" href="#">OGR</a>
     <button class="menu-toggle" aria-expanded="false" aria-controls="primary-nav" aria-label="Toggle navigation">Menu</button>
     <div class="links" id="primary-nav">
       <a href="#about">About</a>
@@ -111,7 +123,7 @@
     </p>
     </div>
     <div class="hero-photo">
-      <img src="assets/image_OGR.jpg" alt="Osman Goni Ridwan portrait" class="avatar" decoding="async" fetchpriority="high" sizes="(max-width: 900px) 180px, 260px">
+      <img src="assets/image_OGR.jpg" alt="Osman Goni Ridwan (OG Ridwan) portrait - AI materials discovery researcher" class="avatar" decoding="async" fetchpriority="high" sizes="(max-width: 900px) 180px, 260px">
     </div>
     </div>
   </section>
