--- a/index.html
+++ b/index.html
@@ -144,6 +144,19 @@
     <div class="news-grid">
     <article class="news-article">
       <div class="news-header">
+        <h3>Preprint: Crystal Representation in the Reciprocal Space</h3>
+        <span class="news-date">Jan 2026</span>
+      </div>
+      <p><i>Crystal Representation in the Reciprocal Space</i> now available on arXiv. This work proposes a four-dimensional (4D) reciprocal space representation featuring Cartesian coordinates and scattering factors to naturally handle translation invariance and space group symmetry. The 4D coordinates are transformed into a power spectrum using orthogonal spherical harmonics and radial basis functions to achieve rotational invariance, demonstrating effectiveness in crystal structure matching and reconstruction tasks.</p>
+      <div class="news-meta">
+        <span class="badge">Preprint</span>
+        <a href="https://arxiv.org/abs/2601.17981" target="_blank" rel="noopener">arXiv</a>
+        <a href="https://doi.org/10.48550/arXiv.2601.17981" target="_blank" rel="noopener">DOI</a>
+      </div>
+    </article>
+
+    <article class="news-article">
+      <div class="news-header">
         <h3>AI-Assisted Crystal Generation Paper Published in <i>npj Computational Materials</i></h3>
         <span class="news-date">Jan 2026</span>
       </div>
@@ -330,7 +343,9 @@
         </div>
       </li>
       <li>
-        <b>Crystal Representation in the Reciprocal Space</b> — 2025. (to submit)
+        <b>Crystal Representation in the Reciprocal Space</b> — 2026.
+        O. G. Ridwan, H. Xue, Y. Chen, H. Cherukuri, Q. Zhu. Preprint available on arXiv.
+        <a href="https://arxiv.org/abs/2601.17981" target="_blank">arXiv</a>
         <div class="badges">
           <span class="badge">preprint</span>
           <a class="badge" href="#" target="_blank" rel="noopener">BibTeX</a>
