--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         <h3>Preprint: Crystal Representation in the Reciprocal Space</h3>
         <span class="news-date">Jan 2026</span>
       </div>
-      <p><i>Crystal Representation in the Reciprocal Space</i> now available on arXiv. This work proposes a four-dimensional (4D) reciprocal space representation featuring Cartesian coordinates and scattering factors to naturally handle translation invariance and space group symmetry. The 4D coordinates are transformed into a power spectrum using orthogonal spherical harmonics and radial basis functions to achieve rotational invariance, demonstrating effectiveness in crystal structure matching and reconstruction tasks.</p>
+      <p>4D reciprocal space representation with scattering factors for symmetry-aware crystal structure matching and reconstruction now on arXiv.</p>
       <div class="news-meta">
         <span class="badge">Preprint</span>
         <a href="https://arxiv.org/abs/2601.17981" target="_blank" rel="noopener">arXiv</a>
