--- a/index.html
+++ b/index.html
@@ -392,11 +392,10 @@
   <!-- CONTACT -->
   <section id="contact">
     <h2>Contact</h2>
-    <p>Email: <a href="mailto:oridwan@charlotte.edu">oridwan@charlotte.edu</a> </p>
-      </div>
+    <p>Email: <a href="mailto:oridwan@charlotte.edu">oridwan@charlotte.edu</a></p>
+    <p>
       <a href="https://scholar.google.com/citations?user=-NaiqfUAAAAJ&hl=en" target="_blank" rel="noopener">Google Scholar</a> ·
-      <div class="project">
-      <a href="https://github.com/oridwan" target="_blank" rel="noopener">GitHub (LEGO‑xtal)</a> ·
+      <a href="https://github.com/oridwan" target="_blank" rel="noopener">GitHub (LEGO-xtal)</a> ·
       <a href="https://linkedin.com/in/ogridwan" target="_blank" rel="noopener">LinkedIn</a>
     </p>
   </section>
