--- a/index.html
+++ b/index.html
@@ -291,6 +291,7 @@
           <li>Developed 4D scattering-informed representations for structure matching and reconstruction.</li>
           <li>Enabled quantitative comparison between simulation outputs and experimental signals.</li>
         </ul>
+        <p class="project-links"><a href="https://arxiv.org/abs/2601.17981" target="_blank">arXiv</a></p>
       </div>
 
       <div class="project">
@@ -301,6 +302,7 @@
           <li>Implements log parsing, failure detection, and auto-retry loops on HPC.</li>
           <li>Goal: autonomous crystal design from minimal user input.</li>
         </ul>
+        <p class="project-links"><a href="https://github.com/oridwan/xtal-builder" target="_blank">Code</a></p>
       </div>
     </div>
   <section id="pubs">
